Fixes #14 - Scroll bars are permanently visible in the passwords list on Windows

--- a/data/panel/panel.less
+++ b/data/panel/panel.less
@@ -171,7 +171,7 @@ input[type="checkbox"]
   flex-direction: column;
   padding: 1px;
   max-height: 300px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .password-container
